--- a/Elbrus/Elbrus.csproj
+++ b/Elbrus/Elbrus.csproj
@@ -7,6 +7,12 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Icon\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AvaloniaResource Include="Icon\icon.png" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.2.1" />
